[package]
name = "sb"
version = "0.6.0"
edition = "2021"
description = "Minimized high-performance Solana flash-loan arbitrage bot"
authors = ["0prob"]
license = "MIT"

[features]
default = ["tui"]
# Disable TUI entirely at compile time for minimal binary on mobile
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
# ── Solana ────────────────────────────────────────────────────────────
solana-client = "=3.1.11"
solana-sdk = "=3.0.0"
solana-transaction-status = "=3.1.11"
solana-message = "=3.0.1"
solana-compute-budget-interface = "3.0"
solana-commitment-config = "3.1"
solana-address-lookup-table-interface = "3.0.1"
solana-system-interface = { version = "3", features = ["bincode"] }

# ── Yellowstone gRPC (Geyser streaming) ──────────────────────────────
yellowstone-grpc-client = "12.2"
yellowstone-grpc-proto = "12.1"

# ── Async runtime + networking ───────────────────────────────────────
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "signal", "net", "io-util", "macros"] }
futures = "0.3"
tonic = "0.14"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream", "query"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

# ── Serialization ────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
base64 = "0.22"
bincode1 = { package = "bincode", version = "=1.3.3" }

# ── CLI / Config ─────────────────────────────────────────────────────
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# ── Logging / Tracing ────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Error handling ───────────────────────────────────────────────────
anyhow = "1"
thiserror = "2"

# ── Misc ─────────────────────────────────────────────────────────────
dashmap = "6"
smallvec = { version = "1.11", features = ["const_generics"] }
arrayvec = "0.7"
zeroize = "1"
tokio-util = "0.7"
rand = "0.10"

# ── TUI (optional — disable with --no-default-features for mobile) ────
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", features = ["event-stream"], optional = true }

# ── Release profile — optimised for latency-critical HFT on aarch64 ──
[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
# Aggressive inlining threshold for hot-path
overflow-checks = false

[profile.dev]
opt-level = 1

# ── Mobile profile — minimal binary for Termux/proot ─────────────────
[profile.mobile]
inherits = "release"
opt-level = "s"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = false
